@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
-<addon id="plugin.image.rouming" name="Rouming" version="1.2" provider-name="jose1711">
+<addon id="plugin.image.rouming" name="Rouming" version="1.3" provider-name="jose1711">
     <requires>
         <import addon="xbmc.python" version="2.25.0"/>
 	<import addon="script.module.stream.resolver" version="1.6.17" />
