@@ -1,3 +1,6 @@
+[B]1.3:[/B]
+* Prechod na HTTPS
+
 [B]1.2:[/B]
 * Upravou zdrojoveho kodu je mozne zapnut Maso
 
